# pequen-usb

./: .gitignore  AGENT.md  LICENSE  README.md  build.sh  install.sh  pyproject.toml  setup.py
.planning/: CHECKLIST.md  CONSTITUTION.md  PROJECT.md  ROADMAP.md  STATE.md  WAVES.md  continue-here.md
gnome-extension/: extension.js  i18n.js  metadata.json  prefs.js  stylesheet.css
gnome-extension/schemas/: gschemas.compiled  org.gnome.shell.extensions.pequen-usb.gschema.xml
ia_doc/: CONTEXT_PRIMER.md  DOCUMENTATION.md  ia_doc.md
rules/: workflow.md
src/pequen_usb/: __init__.py  cli.py  config.py  daemon.py  dbus_client.py  history.py  i18n.py
tests/: test_pequen.py
